sidebar is now minimised

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="teleportElement"></div>
     <script
       type="module"
       src="/src/main.js"></script>
